@@ -7,7 +7,7 @@ pipeline {
               script {
                     sh "java -version"  // Confirma se está usando a versão correta
               }
-              sh "mvn clean package -DskipTests=true --add-opens java.base/java.lang=ALL-UNNAMED"
+              sh "mvn clean package -DskipTests=true"
               archive 'target/*.jar' //so that they can be downloaded later
             }
         }   
